fix: delete first gap

--- a/css/style.css
+++ b/css/style.css
@@ -1220,6 +1220,7 @@ template {
 
 .packages__card--seconde {
   width: 364px;
+  left: -14px;
   background: #0a223d;
   color: #ffffff;
   border-radius: 0 8px 8px 0;
