--- a/sass/blocks/_packages.sass
+++ b/sass/blocks/_packages.sass
@@ -61,7 +61,7 @@
       color: $light
       border-radius: 0 0 8px 8px
     &--first
-      width: 366px 
+      width: 366px
     &-image
       top: 0
       left: 0
@@ -72,6 +72,7 @@
       object-fit: cover
     &--seconde
       width: 364px
+      left: -14px
       background: $dark
       color: $light
       border-radius: 0 8px 8px 0
